--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>{{ site.name }}: {{ page.title }}</title>
+![Anurag's GitHub stats](https://github-readme-stats.vercel.app/api?username=KOALAFFannnnn)
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet"
@@ -72,7 +73,7 @@
                     <a href="https://www.ln.edu.hk/chs">岭南大学 </a>
                     <a href="https://www.ln.edu.hk/"> Lingnan University</a>
                     -
-                    <a href = "mailto: hangxiao@ln.edu.hk">hangxiao@ln.edu.hk</a>
+                    <a href = "mailto: yifanyou@ln.edu.hk">yifanyou@ln.edu.hk</a>
                 </p>
 
 
