--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>{{ site.name }}: {{ page.title }}</title>
+<img src="https://www.helloimg.com/i/2024/10/23/67187f199891f.jpeg" alt="IMG_1800.jpeg" title="IMG_1800.jpeg" />
+<img src="https://www.helloimg.com/i/2024/10/23/67187f3e3d629.jpeg" alt="IMG_1638.jpeg" title="IMG_1638.jpeg" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet"
