--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>{{ site.name }}: {{ page.title }}</title>
-<img src="https://www.helloimg.com/i/2024/10/23/67187f199891f.jpeg" alt="IMG_1800.jpeg" title="IMG_1800.jpeg" width="30px"alt=""/>
-<img src="https://www.helloimg.com/i/2024/10/23/67187f3e3d629.jpeg" alt="IMG_1638.jpeg" title="IMG_1638.jpeg" width="30px"alt=""/>
+<img src="https://www.helloimg.com/i/2024/10/23/67187f199891f.jpeg" alt="IMG_1800.jpeg" title="IMG_1800.jpeg" width="50px"alt=""/>
+<img src="https://www.helloimg.com/i/2024/10/23/67187f3e3d629.jpeg" alt="IMG_1638.jpeg" title="IMG_1638.jpeg" width="50px"alt=""/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet"
@@ -74,7 +74,7 @@
                     <a href="https://www.ln.edu.hk/chs">岭南大学 </a>
                     <a href="https://www.ln.edu.hk/"> Lingnan University</a>
                     -
-                    <a href = "mailto: yifanyou@ln.edu.hk">yifanyou@ln.edu.hk</a>
+                    <a href = "mailto: yifanyou@ln.hk">yifanyou@ln.hk</a>
                 </p>
 
 
